--- a/css/test.css
+++ b/css/test.css
@@ -230,7 +230,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url(../image/damcuoi.jpg);
+    background-image: url(../image/about_me.jpg);
     box-shadow: 5px 5px 2px #3699dc;
     display: block;
     float: none;
